hphp/test/slow/inout/bad-call-17.php.expectf
Fatal error: You cannot decorate this argument as `inout` in %s/bad-call-17.php on line 4
